--- a/gamePage.html
+++ b/gamePage.html
@@ -59,10 +59,12 @@
         <BR>
         <!--Game Zone-->
         <section class="container-fluid">
-
+            <div class="row justify-content-center m-2">
+                <button id="leaveGame" class="btn btn-primary">Leave Game</button>
+            </div>  
             <div class="row gameZone justify-content-center">
                 <!--Player Area-->
-                <div class="col-4">
+                <div class="col-10 col-sm-6 col-md-4 p-0">
                     <section id="playerZone" class="gameBox">
                         <h3 id="playerName">Player Zone</h3>
                         <div class="imageBox">
@@ -76,7 +78,7 @@
                     </section>
                 </div>
                 <!--Opponent Area-->
-                <div class="col-4">
+                <div class="col-10 col-sm-6 col-md-4 p-0">
                     <section id="opponentZone" class="gameBox">
                         <h3 id="opponentName">Opponent Zone</h3>
                         <div class="imageBox">
@@ -90,9 +92,7 @@
                 </div>
              
             </div>
-            <div class="row justify-content-center m-2">
-                <button id="leaveGame" class="btn btn-primary">Leave Game</button>
-            </div>  
+       
         </section>
 
         <!--SCRIPTS-->
