--- a/gamehistory.html
+++ b/gamehistory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
    
     <title>Face Battles</title>
 
@@ -20,8 +20,6 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/elasticslider.css">
     
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="assets/css/coverflow.css">
 
     <!-- Siderbar CSS -->
     <link rel="stylesheet" href="assets/css/sidebar.css">
@@ -56,25 +54,9 @@
 </nav>
 
 
-<!-- Profile Page Panel with Button -->
-<!--
-<section class="panel">
-  <div class="inner row col-12 justify-content-center align-items-center">
-    <div class="histborderBack">
-    <h3 class="userName"></h3>
-     <div class="gameResult"></div> 
-    </div>
-  </div>
-</section>
--->
 
-<div class="photo-history"></div>
-<!-- Photo Slider-->
-<!--
-<div class="slider">
-    <div class="slide" ><img src="assets/images/happy1.jpg" /><p>Tracy Carpenter: Win : Happy :)</p></div>
-</div>
--->
+<div class="photo-history row col-12 justify-content-center align-items-center"></div>
+
 
 
 <!--  Bootstrap 4 JavaScript -->
@@ -101,11 +83,7 @@
 <!-- This program java script-->
 <script src="assets/javascript/gamehistory.js"></script>
 
- <!-- This program java script-->
 
-<!--
- <script src="assets/javascript/elasticslider.js"></script>
--->
 <!-- This program java script-->
 <script src="assets/javascript/sidebar.js"></script>
 
