--- a/gamePage.html
+++ b/gamePage.html
@@ -64,13 +64,13 @@
                     <section id="playerZone" class="gameBox">
                         <h3 id="playerName">Player Zone</h3>
                         <div class="imageBox">
-                            <div id="my_camera"></div> <!--Webcam attach here-->
-                            <div id="playerImage"></div>
+                            <div id="my_camera justify-content-center"></div> <!--Webcam attach here-->
+                            <div id="playerImage justify-content-center"></div>
                         </div>
                         <div id="playerScore">
                             <BR>
-                            <p>Win: <span id="playerWin"></span></p>
-                            <p>Lose: <span id="playerLose"></span></p>
+                            <BR>
+
                         </div>
                     </section>
                 </div>
@@ -79,16 +79,17 @@
                     <section id="opponentZone" class="gameBox">
                         <h3 id="opponentName">Opponent Zone</h3>
                         <div class="imageBox">
-                            <div id="opponentImage"></div>
+                            <div id="opponentImage justify-content-center"></div>
                         </div>
                         <div id="opponentScore">
                             <BR>
-                            <p>Win: <span id="opponentWin"></span></p>
-                            <p>Lose: <span id="opponentLose"></span></p>
+                            <BR>
+
                         </div>
                     </section>
                 </div>
             </div> 
+            <BR>
             <BR>
             <div class="row col-12 justify-content-center">
                 <button id="leaveGame" class="btn">Leave Game</button>
