--- a/gamePage.html
+++ b/gamePage.html
@@ -64,8 +64,8 @@
                     <section id="playerZone" class="gameBox">
                         <h3 id="playerName">Player Zone</h3>
                         <div class="imageBox">
-                            <div id="my_camera justify-content-center"></div> <!--Webcam attach here-->
-                            <div id="playerImage justify-content-center"></div>
+                            <div id="my_camera"></div> <!--Webcam attach here-->
+                            <div id="playerImage"></div>
                         </div>
                         <div id="playerScore">
                             <BR>
@@ -79,7 +79,7 @@
                     <section id="opponentZone" class="gameBox">
                         <h3 id="opponentName">Opponent Zone</h3>
                         <div class="imageBox">
-                            <div id="opponentImage justify-content-center"></div>
+                            <div id="opponentImage"></div>
                         </div>
                         <div id="opponentScore">
                             <BR>
