--- a/gamePage.html
+++ b/gamePage.html
@@ -69,7 +69,8 @@
                         </div>
                         <div id="playerScore">
                             <BR>
-                            <BR>
+                                <p>Win: <span id="playerWin"></span></p>
+                                <p>Lose: <span id="playerLose"></span></p>
 
                         </div>
                     </section>
@@ -83,7 +84,8 @@
                         </div>
                         <div id="opponentScore">
                             <BR>
-                            <BR>
+                                <p>Win: <span id="opponentWin"></span></p>
+                                <p>Lose: <span id="opponentLose"></span></p>
 
                         </div>
                     </section>
