--- a/gamePage.html
+++ b/gamePage.html
@@ -68,7 +68,6 @@
                             <div id="playerImage"></div>
                         </div>
                         <div id="playerScore">
-                            <BR>
                                 <p>Win: <span id="playerWin"></span></p>
                                 <p>Lose: <span id="playerLose"></span></p>
 
@@ -83,7 +82,6 @@
                             <div id="opponentImage"></div>
                         </div>
                         <div id="opponentScore">
-                            <BR>
                                 <p>Win: <span id="opponentWin"></span></p>
                                 <p>Lose: <span id="opponentLose"></span></p>
 
@@ -93,8 +91,10 @@
             </div> 
             <BR>
             <BR>
+            <BR>
+            <BR>
             <div class="row col-12 justify-content-center">
-                <button id="leaveGame" class="btn">Leave Game</button>
+                <button id="leaveGame" class="btn btn-secondary">Leave Game</button>
             </div>       
         </section>
  
