--- a/gamePage.html
+++ b/gamePage.html
@@ -91,9 +91,7 @@
             </div> 
             <BR>
             <BR>
-            <BR>
-            <BR>
-            <div class="row col-12 justify-content-center">
+            <div class="row col-12 col-sm-12 justify-content-center">
                 <button id="leaveGame" class="btn btn-secondary">Leave Game</button>
             </div>       
         </section>
