--- a/gamePage.html
+++ b/gamePage.html
@@ -64,7 +64,7 @@
                     <section id="playerZone" class="gameBox">
                         <h3 id="playerName">Player Zone</h3>
                         <div class="imageBox">
-                            <div id="my_camera"></div> <!--Webcam attach here-->
+                            <div id="my_camera justify-content-center"></div> <!--Webcam attach here-->
                             <div id="playerImage"></div>
                         </div>
                         <div id="playerScore">
