--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   <a id="menu-toggle" href="#" class="btn btn-light btn-sm toggle"><i class="fa fa-bars" data-toggle="tooltip" title="MENU"></i></a>
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
-      <a id="menu-close" href="#" class="btn btn-light btn-sm float-right toggle" hidden><i class="fa fa-times"></i></a>
+      <a id="menu-close" href="#" class="btn btn-light btn-sm float-right toggle" ><i class="fa fa-times"></i></a>
       <li class="sidebar-brand">
       <a href="index.html" onclick="$('#menu-close').click();">Face Battles</a>
         
       </li>
       <li>
-      <a href="chatroom.html" onclick="$('#menu-close').click();">User Login</a>
+      <a href="login.html" onclick="$('#menu-close').click();">User Login</a>
       </li>
       <li>
         <a href="gamehistory.html" onclick="$('#menu-close').click();">Photo Album</a>
