--- a/login.html
+++ b/login.html
@@ -57,9 +57,10 @@
 
 <section class = "row col-12 justify-content-center align-items-center" >
   
-    <div class="slide"><p> Please sign in with your Google account: </p>
+    <div class="slide"><p id="loginMsg"> Please sign in with your Google account: </p>
         <!--Google Sign-in button -->
-        <div id="signin" class="g-signin2" data-onsuccess="onSignIn"></div>
+        <div id="signin" class="g-signin2 justify-content-center" data-onsuccess="onSignIn"></div>
+    
     </div>
 </section>
 
