--- a/login.html
+++ b/login.html
@@ -60,6 +60,9 @@
     <div class="slide"><p id="loginMsg"> Please sign in with your Google account: </p>
         <!--Google Sign-in button -->
         <div id="signin" class="g-signin2 justify-content-center" data-onsuccess="onSignIn"></div>
+        <div class="row col-12 col-sm-12 justify-content-center">
+          <button id="loginComplete" class="btn btn-secondary">Complete</button>
+      </div>   
     
     </div>
 </section>
