--- a/gamePage.html
+++ b/gamePage.html
@@ -90,7 +90,9 @@
                 </div>
             </div> 
             <BR>
-            <BR>
+            <div class="row col-12 col-sm-12 justify-content-center">
+                        <button id="gameReady" class="btn btn-success">Take Picture</button>
+                    </div> 
             <div class="row col-12 col-sm-12 justify-content-center">
                 <button id="leaveGame" class="btn btn-secondary">Leave Game</button>
             </div>       
