--- a/gamePage.html
+++ b/gamePage.html
@@ -91,6 +91,7 @@
             </div> 
             <div class="row col-12 col-sm-12 justify-content-center">
                         <button id="gameReady" class="btn btn-success">Take Picture</button>
+                        <button id="gameReset" class="btn btn-danger">Reset</button>
                     </div> 
             <div class="row col-12 col-sm-12 justify-content-center">
                 <button id="leaveGame" class="btn btn-secondary">Leave Game</button>
